# trajectories

./: .gitignore  1.patch  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
lib/: CMakeLists.txt  Trajectory.cpp  Trajectory.h  serialize.cpp  serialize.h  stats.h  trajectory.cpp  trajectory.h
utests/: CMakeLists.txt  utests.cpp
